[package]
name = "ui"
version = "0.1.0"
edition = "2021"


[dependencies]
dioxus = { version = "0.2.4", features = ["web",  "router", "fermi"] }
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "^1.0"
gloo = "0.8.0"
log = "0.4.6"
wasm-logger = "0.2.0"
random-string = "1.0"
